update[java]: update java version to java 11